fix: remove unneeded centered align in columns

--- a/campaign/blocks/columns/columns.css
+++ b/campaign/blocks/columns/columns.css
@@ -18,7 +18,6 @@ main .columns>div {
     display: flex;
     flex-direction: column;
     padding: 24px 0;
-    align-items: center;
     justify-content: space-between;
     text-align: center;
 }
